--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markify-test",
-  "version": "0.0.26",
+  "name": "markify-ts",
+  "version": "0.0.1",
   "description": "Convert web pages and HTML snippets into Markdown content",
   "type": "module",
   "main": "dist/index.js",
