--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "markify": "tsx run.ts",
     "build": "tsup index.ts --minify --dts --format esm --out-dir dist",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "dev": "next dev",
+    "build:next": "next build",
+    "start": "next start"
   },
   "keywords": [
     "html",
@@ -32,9 +35,21 @@
     "url": "https://github.com/thiagobarbosa/markify-ts"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@swc/core": "^1.11.13",
     "@swc/types": "^0.1.20",
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.341.0",
+    "next": "^14.2.26",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
@@ -44,8 +59,12 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
-    "tsup": "^8.0.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.22",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "tsup": "^8.0.0", 
     "typescript": "^5"
   },
   "peerDependencies": {
