--- a/markify/package.json
+++ b/markify/package.json
@@ -11,14 +11,14 @@
   },
   "files": [
     "dist",
-    "README.md",
-    "LICENSE"
+    "../README.md",
+    "../LICENSE"
   ],
   "scripts": {
     "markify": "tsx run.ts",
     "build": "tsup index.ts --minify --dts --format esm --out-dir dist",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint ..",
+    "lint:fix": "eslint .. --fix"
   },
   "keywords": [
     "html",
@@ -40,8 +40,6 @@
     "@eslint/js": "^9.23.0",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^9.23.0",
@@ -49,8 +47,6 @@
     "typescript": "^5"
   },
   "peerDependencies": {
-    "cheerio": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "cheerio": "^1.0.0"
   }
 }
