--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ldrs": "^1.1.6",
+    "lucide-react": "^0.487.0",
     "markify-ts": "^0.0.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
