--- a/web/package.json
+++ b/web/package.json
@@ -24,18 +24,21 @@
     "ldrs": "^1.1.6",
     "lucide-react": "^0.487.0",
     "markify-ts": "^0.0.5",
+    "motion": "^12.6.3",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.2.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -45,7 +48,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.15",
     "typescript": "^5"
   }
 }
