--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.13.0",
     "@clerk/themes": "^2.2.27",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
