--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "ldrs": "^1.1.6",
     "lucide-react": "^0.487.0",
-    "markify-ts": "^0.0.8",
+    "markify-ts": "latest",
     "motion": "^12.6.3",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
